[project]
name = "chdb"
requires-python = ">=3.9"
version = "3.7.0"
description = "chDB is an in-process OLAP SQL Engine powered by ClickHouse"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "chDB Team", email = "auxten@clickhouse.com"},
]
keywords = ["chdb", "clickhouse", "olap", "analytics", "database", "sql"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "chdb-core>=26.5.0",
    "pandas>=2.1.0",
    "pyarrow>=13.0.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
publish = ["twine", "wheel"]

[project.urls]
Homepage = "https://clickhouse.com/chdb"
Documentation = "https://chdb.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/chdb-io/chdb"
Changelog = "https://github.com/chdb-io/chdb/releases"
Issues = "https://github.com/chdb-io/chdb/issues"

[build-system]
requires = [
    "setuptools>=46.1.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["datastore*", "chdb", "chdb.agents"]
namespaces = true

[tool.setuptools.exclude-package-data]
chdb = ["*.dylib", "*.so"]

# Ship the agents contract + conformance fixture (non-.py data) in the wheel, so
# `import chdb.agents` and the conformance runner work on a real `pip install`,
# not only in the source tree.
[tool.setuptools.package-data]
chdb = [
    "agents/CONTRACT.md",
    "agents/conformance/*.jsonl",
    "agents/conformance/*.md",
    "agents/conformance/fixtures/*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["datastore/tests"]

[tool.pyright]
include = ["datastore"]
exclude = ["src", "contrib", "programs", "build", "buildlib", "dist", "venv", ".venv", ".vscode", ".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
pythonVersion = "3.9"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
    "datastore/tests",
]

[tool.ruff.lint]
# Drop-in replacement for the flake8 config that previously lived in setup.cfg.
# Critical errors only — see AGENTS.md Section 2.9 for why this is intentionally narrow.
select = ["E9", "F63", "F7", "F82"]
ignore = ["F811"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
