# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = chdb
description = chDB is an in-process SQL OLAP Engine powered by ClickHouse
author = auxten
author_email = auxten@clickhouse.com
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/chdb-io/chdb
# Add here related links, for example:
project_urls =
    Homepage = https://clickhouse.com/chdb
    Documentation = https://clickhouse.com/docs/en/chdb
    Source = https://github.com/chdb-io/chdb
    Download = https://pypi.org/project/chdb/#files
    Twitter = https://twitter.com/chdb_io

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Mac, Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database
    Topic :: Scientific/Engineering :: Information Analysis

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
max-line-length = 120
max-complexity = 10
# F401: imported but unused (for __init__.py re-exports)
# F811: redefinition of unused name (for pytest fixtures)
per-file-ignores = __init__.py:F401
ignore = F811
# Only check for critical errors
select = E9,F63,F7,F82
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    chdb/build/
    chdb/datastore/tests/

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.4
package = chdb
extensions =
    markdown

[options]
python_requires = >=3.9
