add_subdirectory (Crypto)
add_subdirectory (Data)
add_subdirectory (Data/ODBC)
add_subdirectory (Foundation)
add_subdirectory (JSON)
if (ENABLE_MONGODB)
    add_subdirectory (MongoDB)
endif ()
add_subdirectory (Net)
add_subdirectory (NetSSL_OpenSSL)
if (ENABLE_REDIS)
    add_subdirectory (Redis)
endif ()
add_subdirectory (Util)
add_subdirectory (XML)
